feat: added functionality to replace Apex's System.debug statements with LOGGER.debug statements

--- a/test/commands/rflib/logging/apex/sample/InstrumentedClass.cls
+++ b/test/commands/rflib/logging/apex/sample/InstrumentedClass.cls
@@ -1,5 +1,5 @@
 public with sharing class InstrumentedClass {
-  private static final rflib_Logger LOGGER = rflib_LoggerUtil.getFactory().createLogger('InstrumentedClass');
+  private static final rflib_Logger MY_LOGGER = rflib_LoggerUtil.getFactory().createLogger('InstrumentedClass');
 
   public void doSomething() {
       System.debug('test');
